force-app/main/default/objects/SalesContributionStock__c/SalesContributionStock__c.object-meta.xml
<CustomObject>
    <label>Sales Contribution Stock</label>
    <nameField>
        <label>Sales Contribution  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Contribution Stocks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>