force-app/main/default/objects/SalesContributionStock__c/fields/Current_year__c.field-meta.xml
<CustomField>
    <fullName>Current_year__c</fullName>
    <label>Current year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>