force-app/main/default/objects/SalesContributionStock__c/fields/Last_year__c.field-meta.xml
<CustomField>
    <fullName>Last_year__c</fullName>
    <label>Last year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>